@@ -1,4 +1,4 @@
-.TH ASPIS 8 "Dec 08 2011" "Version 0.4"
+.TH ASPIS 8 "Jan 11 2012" "Version 0.5"
 .SH NAME
 .B aspis \- a single\-task high performance http server
 .SH SYNOPSIS
@@ -220,8 +220,11 @@ December 8, 2011
 Aspis 0.3 was released by Stefano Guidoni on
 December 9, 2011
 .PP
-Aspis 0.3 was released by Stefano Guidoni on
+Aspis 0.4 was released by Stefano Guidoni on
 December 12, 2011
+.PP
+Aspis 0.5 was released by Stefano Guidoni on
+January 11, 2012
 .SH BUGS
 There are probably bugs, but we are not aware of any at this time.
 .SH AUTHOR
