@@ -4,7 +4,7 @@
 <head><title>Aspis test page</title></head>
 <body style="background-color: white;">
 <img src="banner.png" alt="banner">
-<h1>Aspis webserver version 0.4</h1>
+<h1>Aspis webserver version 0.5</h1>
 Aspis is up and running.
 <h3>Some cgi test</h3>
 <ul>
